# pyri-robotics-browser

./: README.md  pyproject.toml  setup.py
src/pyri/robotics_browser/components/: jog_component.html  jog_component.py  robotics_components.py
src/pyri/robotics_browser/panels/: jog_panel.py  robotics_panels.py
